add get promotion-rules apis
